--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
   <!-- Navbar -->
   <nav class="navbar">
     <div class="container">
-      <a class="navbar-brand" href="#">pages</a>
+      <a class="navbar-brand" href="#">HOLA ! </a>
       <ul class="navbar-menu">
         <li><a href="#">Home</a></li>
         <li><a href="#">Clothes</a></li>
@@ -90,7 +90,7 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="container text-center">
-      <p>&copy; 2024 ShopPro. All rights reserved.</p>
+      <p>&copy; 2024 Glamour Corner. All rights reserved.</p>
     </div>
   </footer>
 </body>
