--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -83,6 +83,18 @@
           <p>120DT</p>
           <button class="btn">Add to Cart</button>
         </div>
+        <div class="product-card">
+          <img src="https://static.parisfashionshops.com/paris/images/femme/rosy-days/manteaux/a0AW5000006ge8rMAA/manteau-court-chic-boutonne-avec-doublure_tan_66f0cb0587fbc.jpg?image_process=resize,w_400/threshold,100000" alt="Product">
+          <h3>Manteau cachmire </h3>
+          <p>180DT</p>
+          <button class="btn">Add to Cart</button>
+        </div>
+        <div class="product-card">
+          <img src="https://www.cesarenori.fr/blog/wp-content/uploads/2022/12/a-snow.jpeg" alt="Product">
+          <h3> Doudoune </h3>
+          <p>100DT</p>
+          <button class="btn">Add to Cart</button>
+        </div>
       </div>
     </div>
   </main>
