--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,12 +3,12 @@
       <a class="navbar-brand" href="/">HOLA ! </a>
       <ul class="navbar-menu">
         <li><a href="/">Home</a></li>
-        <li><a href="/clothes">Clothes</a></li>
+        <li><a href="/clothes" target="_blank">Clothes</a></li>
         <li><a href="/shoes">Shoes</a></li>
         <li><a href="/bags">Bags</a></li>
-        <li><a href="/sales">Sales</a></li>
-        <li><a href="/accessories">Accessories</a></li>
-        <li><a href="/connexion">Connexion</a></li>
+        <li><a href="/sales"></a>Sales</li>
+        <li><a href="/accessories"></a>Accessories</li>
+        <li><a href="/connexion"></a>Connexion</li>
         <i class="fa-solid fa-cart-shopping"></i>
       </ul>
     </div>
