Ajout des fonctionnalités pour afficher les tailles et pointures

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,15 @@
 <nav class="navbar">
     <div class="container">
-      <a class="navbar-brand" href="/">HOLA ! </a>
+      <a class="navbar-brand" href="/">HOLA SHOPPERS ! </a>
       <ul class="navbar-menu">
         <li><a href="/">Home</a></li>
         <li><a href="/clothes" target="_blank">Clothes</a></li>
         <li><a href="/shoes">Shoes</a></li>
         <li><a href="/bags">Bags</a></li>
-        <li><a href="/sales"></a>Sales</li>
-        <li><a href="/accessories"></a>Accessories</li>
-        <li><a href="/connexion"></a>Connexion</li>
-        <i class="fa-solid fa-cart-shopping"></i>
+        <li><a href="/connexion">Connexion</a></li>
+        <li routerLink="/panier"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag-heart-fill" viewBox="0 0 16 16">
+          <path d="M11.5 4v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4zM8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1m0 6.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132"/>
+        </svg></li>
       </ul>
     </div>
     
@@ -23,3 +23,5 @@
       <p>&copy; 2024 Glamour Corner. All rights reserved.</p>
     </div>
   </footer>
+  
+
