--- a/src/app/pages/clothes/clothes.component.css
+++ b/src/app/pages/clothes/clothes.component.css
@@ -23,7 +23,7 @@
   
   .card-image {
     width: 100%;
-    height: 200px;
+    height: 400px;
     overflow: hidden;
   }
   
@@ -62,6 +62,7 @@
   
   .order-button {
     padding: 10px 20px;
+    margin-left: 20px;
     background-color: #007bff;
     color: #fff;
     border: none;
@@ -73,6 +74,48 @@
   }
   
   .order-button:hover {
+    background-color: #0056b3;
+  }
+  
+
+  .select-button{
+    padding: 10px 20px;
+    margin-left: 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1em;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+  }
+
+  .select-button:hover {
+    background-color: #0056b3;
+  }
+  .select-button.selected {
+    background-color: #28a745; /* Vert */
+    color: #fff;
+  }
+  .sizes {
+    margin-top: 10px;
+    text-align: center;
+  }
+  
+  .size-button {
+    padding: 5px 15px;
+    margin: 5px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1em;
+    transition: background-color 0.3s ease;
+  }
+  
+  .size-button:hover {
     background-color: #0056b3;
   }
   
