--- a/src/app/pages/connexion/connexion.component.html
+++ b/src/app/pages/connexion/connexion.component.html
@@ -1,38 +1,16 @@
+<main class="form-container">
+  <div class="container">
+    <h2>Connexion</h2>
 
-
-
-  <main class="form-container">
-    <div class="container">
-      <h2>Connexion / Inscription</h2>
-      <div class="form-toggle">
-        <button id="login-toggle" onclick="toggleLogin()">Se connecter</button>
-        <button id="register-toggle" onclick="toggleRegister()">S'inscrire</button>
-      </div>
-      
-      <form id="login-form" class="form">
-        <label for="login-email">Email</label>
-        <input type="email" id="login-email" name="email" required>
-        <label for="login-password">Mot de passe</label>
-        <input type="password" id="login-password" name="password" required>
-        <button type="submit" class="btn">Se connecter</button>
-      </form>
-
-      <form id="register-form" class="form hidden">
-        <label for="register-name">Nom</label>
-        <input type="text" id="register-name" name="name" required>
-        <label for="register-prenom">Prénom</label>
-        <input type="text" id="register-prenom" name="prenom" required>
-        <label for="register-city">Ville</label>
-        <input type="text" id="register-city" name="city" required>
-        <label for="register-email">Email</label>
-        <input type="email" id="register-email" name="email" required>
-        <label for="register-password">Mot de passe</label>
-        <input type="password" id="register-password" name="password" required>
-        <button type="submit" class="btn">S'inscrire</button>
-      </form>
-    </div>
-  </main>
-
-  <script src="scripts.js"></script>
-
+    <!-- Formulaire de Connexion -->
+    <form id="login-form" class="form" (ngSubmit)="validateLoginForm()">
+      <label for="login-email">Email</label>
+      <input type="email" id="login-email" [(ngModel)]="loginEmail" name="email" required>
+      <label for="login-password">Mot de passe</label>
+      <input type="password" id="login-password" [(ngModel)]="loginPassword" name="password" required>
+      <button type="submit" class="btn se-connecter">Se connecter</button>
+      <button id="register-toggle" class="btn" routerLink="/register">S'inscrire</button>
+    </form>
+  </div>
+</main>
 
