--- a/src/app/pages/Home/home.component.html
+++ b/src/app/pages/Home/home.component.html
@@ -1,5 +1,9 @@
   <!-- Hero Section -->
   <header class="hero">
+    <audio autoplay loop>
+      <source src="assets/music/videoplayback.mp3" type="audio/mpeg">
+      Votre navigateur ne supporte pas la lecture audio.
+    </audio>
     <div class="video-container">
       <video autoplay loop muted>
         <source src="assets/video.mp4" type="video/mp4">
